test/tests/stages/14_pointers/valid/extra_credit/switch_dereferenced_pointer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: l
        CSingleInit: 
          CConstant: 
            CConstLong: 
              TLong: 4294967300
            None: 
          None: 
        Long: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: get_ptr
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CAddrOf: 
                  CVar: 
                    TIdentifier: l
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Pointer: 
            Long: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CSwitch: 
                TIdentifier: (null)
                Bool: 0
                CDereference: 
                  CFunctionCall: 
                    TIdentifier: get_ptr
                    List[0]: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[5]: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 4
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 2
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstLong: 
                              TLong: 4294967300
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 0
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstULong: 
                              TULong: 18446744073709551600
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 3
                              None: 
                      CS: 
                        CDefault: 
                          TIdentifier: (null)
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 4
                              None: 
                List[0]: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
